fix bug phần clients

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ a {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
-    letter-spacing: 0.01;
+    letter-spacing: 0.01em;
     color: #687690;
 }
 
@@ -174,10 +174,22 @@ a {
 }
 
 .clients .images {
-    margin-top: 96px;
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    padding: 0 42px;
+    height: 90px;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px #0000001A;
 }
 
 /* Guides */
@@ -362,7 +374,7 @@ a {
     /* span nhưng căn margin sang trái phải vẫn được */
     font-weight: 500;
     font-size: 14px;
-    letter-spacing: 0.01;
+    letter-spacing: 0.01em;
     color: #4D4D52;
 }
 
@@ -417,7 +429,7 @@ a {
     font-weight: 700;
     font-size: 2.6rem;
     line-height: 1;
-    letter-spacing: 0.01;
+    letter-spacing: 0.01em;
     color: #000339;
 }
 
