--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,9 +59,21 @@ a {
 }
 
 /* Header */
-.header {
+
+.header-fixed {
     background-color: #e6f0ff;
-    height: 100vh;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrapped {
+    /* Xử lý margin collapse */
+    display: flex;
+    flex-direction: column;
+    background-color: #e6f0ff;
+    height: calc(100vh - 90px);
     /* mới vào trang thì phần header nó sẽ lắp đầy cái viewport */
     position: relative;
     /* dùng vị trí tương đối cho ảnh */
@@ -70,8 +82,9 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    /* padding-top: 38px; */
     /* Xảy ra margin collapse (margin đẩy cái nền xuống luôn) nên cần dùng padding để đệm */
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -640,10 +653,15 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 3px;
+    background: #f9f9f9;
+}
+
+.footer .social-link+.social-link {
+    margin-left: 16px;
 }
 
 .footer .social-link:hover {
-    background: #ebebeb;
+    background-color: #ebebeb;
 }
 
 .footer .row-bottom {
